--- a/app/wp-content/themes/wphetic/src/style/main.scss
+++ b/app/wp-content/themes/wphetic/src/style/main.scss
@@ -1,3 +1,6 @@
 // COMPONENTS
 @import "./components/menu";
-@import "./template/post";
+
+// TEMPLATES
+@import "./templates/post";
+@import "./templates/homepage";
