--- a/app/wp-content/themes/wphetic/src/style/templates/_homepage.scss
+++ b/app/wp-content/themes/wphetic/src/style/templates/_homepage.scss
@@ -3,30 +3,83 @@
 
     &-title {
         font-weight: bold;
-        font-size: 32px;
+        font-size: 22px;
         margin-bottom: 2rem;
     }
 
-    .card {
-        border: none !important;
-        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    &-gallery {
+        display: flex;
+        justify-content: space-between;
 
-        &-title {
-            color: rgb(255, 136, 0);
+        @media screen and (max-width: 1024px) {
+            flex-direction: column;
         }
 
-        img {
-            width: 100% !important;
-            height: 300px !important;
-            object-fit: cover;
-        }
+        .card {
+            width: 30%;
+            border: none !important;
+            box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
-        &-content {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 1rem;
-            color: black !important;
-            font-size: 16px !important;
+            @media screen and (max-width: 1024px) {
+                width: 100%;
+                margin-bottom: 32px;
+            }
+    
+            &-title {
+                color: rgb(255, 136, 0);
+                margin: 0;
+            }
+    
+            img {
+                width: 100% !important;
+                height: 300px !important;
+                object-fit: cover;
+            }
+
+            &-body {
+                padding: 1rem;
+            }
+    
+            &-content {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin-top: 1rem;
+                font-size: 14px;
+
+                @media screen and (max-width: 1024px) {
+                    display: block;
+
+                    p {
+                        margin-top: 24px;
+                    }
+                }
+
+                a {
+                    color: black;
+                }
+
+                p {
+                    margin: 0;
+                }
+            }
+        }
+    }
+
+    &-buttons {
+        display: flex;
+        justify-content: center;
+
+        button {
+            margin: 48px 12px;
+            padding: 12px;
+            background-color: white;
+            border: 1px solid black;
+
+            a {
+                color: black;
+                text-decoration: none;
+            }
         }
     }
 }
