--- a/app/wp-content/themes/wphetic/src/style/main.css
+++ b/app/wp-content/themes/wphetic/src/style/main.css
@@ -1,8 +1,59 @@
-header .brand-name {
-  color: #ff8800;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400&display=swap");
+body {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+}
+
+header .menu-top, footer .menu-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 24px;
+  background-color: #202020;
+}
+header .menu-top__title, footer .menu-top__title {
+  color: white;
+  font-size: 22px;
+}
+header .menu-top__search form, footer .menu-top__search form {
+  margin: 0;
+}
+header .menu-top__search form input, header .menu-top__search form button, footer .menu-top__search form input, footer .menu-top__search form button {
+  padding: 8px;
+}
+header .menu-bot, footer .menu-bot {
+  background-color: #f3f3f3;
+  padding: 8px;
+}
+header .menu-bot__list, footer .menu-bot__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style-type: none;
+  margin: 0;
+}
+header .menu-bot__list li, footer .menu-bot__list li {
+  margin: 0 12px;
+  color: black !important;
+}
+header .menu a, footer .menu a {
+  text-decoration: none;
 }
 
 .post_container {
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
   width: 60%;
   padding: 3rem;
   border-radius: 20px;
@@ -84,31 +135,92 @@ header .brand-name {
 }
 .cards-title {
   font-weight: bold;
-  font-size: 32px;
+  font-size: 22px;
   margin-bottom: 2rem;
 }
-.cards .card {
-  border: none !important;
-  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-}
-.cards .card-title {
-  color: #ff8800;
-}
-.cards .card img {
-  width: 100% !important;
-  height: 300px !important;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.cards .card-content {
+.cards-gallery {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+@media screen and (max-width: 1024px) {
+  .cards-gallery {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+.cards-gallery .card {
+  width: 30%;
+  border: none !important;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+@media screen and (max-width: 1024px) {
+  .cards-gallery .card {
+    width: 100%;
+    margin-bottom: 32px;
+  }
+}
+.cards-gallery .card-title {
+  color: #ff8800;
+  margin: 0;
+}
+.cards-gallery .card img {
+  width: 100% !important;
+  height: 300px !important;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.cards-gallery .card-body {
+  padding: 1rem;
+}
+.cards-gallery .card-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-top: 1rem;
-  color: black !important;
-  font-size: 16px !important;
+  font-size: 14px;
+}
+@media screen and (max-width: 1024px) {
+  .cards-gallery .card-content {
+    display: block;
+  }
+  .cards-gallery .card-content p {
+    margin-top: 24px;
+  }
+}
+.cards-gallery .card-content a {
+  color: black;
+}
+.cards-gallery .card-content p {
+  margin: 0;
+}
+.cards-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.cards-buttons button {
+  margin: 48px 12px;
+  padding: 12px;
+  background-color: white;
+  border: 1px solid black;
+}
+.cards-buttons button a {
+  color: black;
+  text-decoration: none;
 }
