--- a/app/wp-content/themes/wphetic/src/style/templates/_post.scss
+++ b/app/wp-content/themes/wphetic/src/style/templates/_post.scss
@@ -1,4 +1,7 @@
 .post_container {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
     width: 60%;
     padding: 3rem;
     border-radius: 20px;
