--- a/app/wp-content/themes/wphetic/src/style/main.css
+++ b/app/wp-content/themes/wphetic/src/style/main.css
@@ -7,8 +7,7 @@ body {
 .form {
   position: relative;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   margin: 4% 0;
   width: 40%;
 }
@@ -31,15 +30,9 @@ body {
 }
 
 header .menu-top, footer .menu-top {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   padding: 24px;
   background-color: #202020;
 }
@@ -58,12 +51,8 @@ header .menu-bot, footer .menu-bot {
   padding: 8px;
 }
 header .menu-bot__list, footer .menu-bot__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   list-style-type: none;
   margin: 0;
 }
@@ -78,26 +67,19 @@ header .menu a, footer .menu a {
 .post_container {
   position: relative;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   width: 60%;
   padding: 3rem;
   border-radius: 20px;
 }
 
 .post_info {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 .post_info > * {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
 }
 
 .post_info > .post_date {
@@ -105,13 +87,8 @@ header .menu a, footer .menu a {
 }
 
 .post_content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .post_content > .post_price_category {
@@ -125,25 +102,14 @@ header .menu a, footer .menu a {
 
 /* COMMENTS */
 .post_container .post_comment {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .post_container .post_comment > .comment-meta {
-  -webkit-box-flex: 0;
-      -ms-flex: 0;
-          flex: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex: 0;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 .post_container .post_comment > .comment-meta > .comment_date {
@@ -151,9 +117,7 @@ header .menu a, footer .menu a {
 }
 
 .post_container .post_comment > .comment_content {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
 }
 
 .cards {
@@ -165,26 +129,18 @@ header .menu a, footer .menu a {
   margin-bottom: 2rem;
 }
 .cards-gallery {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 @media screen and (max-width: 1024px) {
   .cards-gallery {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
 }
 .cards-gallery .card {
   width: 30%;
   border: none !important;
-  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 @media screen and (max-width: 1024px) {
   .cards-gallery .card {
@@ -199,22 +155,15 @@ header .menu a, footer .menu a {
 .cards-gallery .card img {
   width: 100% !important;
   height: 300px !important;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .cards-gallery .card-body {
   padding: 1rem;
 }
 .cards-gallery .card-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   margin-top: 1rem;
   font-size: 14px;
 }
@@ -233,12 +182,8 @@ header .menu a, footer .menu a {
   margin: 0;
 }
 .cards-buttons {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 .cards-buttons button {
   margin: 48px 12px;
@@ -250,3 +195,5 @@ header .menu a, footer .menu a {
   color: black;
   text-decoration: none;
 }
+
+/*# sourceMappingURL=main.css.map */
