--- a/app/wp-content/themes/wphetic/src/style/templates/_post.scss
+++ b/app/wp-content/themes/wphetic/src/style/templates/_post.scss
@@ -1,48 +1,93 @@
 .post_container {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 60%;
-    padding: 3rem;
-    border-radius: 20px;
+  margin: 10px 0;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 60%;
+  box-shadow: 0px 0px 3px rgba($color: #000000, $alpha: 0.2);
+  padding: 3rem;
+  border-radius: 20px;
+  .post_title {
+    text-align: center;
+  }
 }
-.post_info{
-    display: flex;
-    align-items: center;
+
+h2.post_headline,
+h2.comments__title {
+  color: rgb(255, 111, 97);
+  width: 100%;
+  text-align: center;
+  padding: 20px 0;
 }
-.post_info > * {
-    flex: 1;
+
+.post_info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.post_info > .post_date {
-    margin-left: auto;
-}
-.post_content{
-    display: flex;
-    flex-direction: column;
+
+.post_content {
+  display: flex;
+  flex-direction: column;
 }
 .post_content > .post_price_category {
-    margin-left: auto;
+  margin-left: auto;
 }
 .post_content > .post_description {
-    text-align: justify;
-    word-break: break-all;
+  text-align: justify;
+  word-break: break-all;
 }
 
 /* COMMENTS */
 .post_container .post_comment {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .post_container .post_comment > .comment-meta {
-    flex: 0;
-    display: flex;
-    align-items: center;
+  flex: 0;
+  display: flex;
+  align-items: center;
 }
 .post_container .post_comment > .comment-meta > .comment_date {
-    margin-left: auto;
+  margin-left: auto;
 }
 
-.post_container .post_comment > .comment_content{
-    flex: 1;
+.post_container .post_comment > .comment_content {
+  flex: 1;
+}
+.img-thumbnail {
+  display: inline-block;
 }
 
+.comment-block {
+  display: contents;
+  p {
+    width: 100%;
+  }
+}
+
+.comment-by {
+  width: 90%;
+  margin-left: 15px;
+  height: 50px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+.comment {
+  list-style-type: none;
+}
+
+.comment > .comment {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 30px;
+  box-shadow: 0px 0px 4px rgba(#000000, 0.3);
+  margin: 30px 0 0 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
